--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
     "db:seed": "prisma db seed",
-    "vercel-build": "prisma generate && prisma migrate deploy && next build"
+    "vercel-build": "prisma generate && node scripts/vercel-pre-deploy.js && next build"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
